syntax = "proto3";
package umee.leverage.v1;

import "gogoproto/gogo.proto";

option go_package = "github.com/umee-network/umee/v4/x/leverage/types";

option (gogoproto.goproto_getters_all) = false;

// QueryBorrowers defines the request structure for the
// Borrowers gRPC service handler.
message QueryBorrowers {
  // Minimum value is the minimum borrowed USD value to include in the returned list of borrowers
  string minimum_value = 1 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable)   = false
  ];
}

// QueryBorrowersResponse defines the response structure for the Borrowers gRPC service handler.
message QueryBorrowersResponse {
  // Targets are borrow positions currently marked for bad debt repayment. Each contains an Address and a Denom.
  repeated BorrowerSummary borrowers = 1 [
    (gogoproto.nullable) = false
  ];
}
// BorrowerSummary defines a borrower's address and account health.
message BorrowerSummary {
  option (gogoproto.equal) = true;
  string address           = 1;
  // Supplied Value is the sum of the USD value of all tokens the account has supplied, includng interest earned.
  string supplied_value = 2 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable)   = false
  ];
  // Collateral Value is the sum of the USD value of all uTokens the account has collateralized.
  string collateral_value = 3 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable)   = false
  ];
  // Borrowed Value is the sum of the USD value of all tokens the account has borrowed, including interest owed.
  string borrowed_value = 4 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable)   = false
  ];
  // Borrow Limit is the maximum Borrowed Value the account is allowed to reach through direct borrowing.
  string borrow_limit = 5 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable)   = false
  ];
  // Liquidation Threshold is the Borrowed Value at which the account becomes eligible for liquidation.
  string liquidation_threshold = 6 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable)   = false
  ];
}